# gemini-worker-rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  改写方式.md
.github/workflows/: docker.yml
.spec-workflow/templates/: tasks-template.md
docs/plans/: 2026-04-08-admin-ui-upgrade-design.md  2026-04-08-admin-ui-upgrade-plan.md  2026-04-08-rust-idiom-perf-design.md  2026-04-08-rust-idiom-perf-plan.md  2026-04-09-generate-content-memory-redesign-benchmark-notes.md  2026-04-09-generate-content-memory-redesign-design.md  2026-04-09-generate-content-memory-redesign.md  2026-04-10-docker-mock-upstream-benchmark-design.md  2026-04-10-docker-mock-upstream-benchmark.md  2026-04-10-jemalloc-default-design.md  2026-04-10-jemalloc-default.md  2026-04-11-error-reporting-design.md  (+6 more)
scripts/: benchmark_docker_mock_upstream.py  compare_with_go.sh  docker_aiapidev_regression.py  grsai_sync_compat.py  test_benchmark_docker_mock_upstream.py  test_docker_aiapidev_regression.py  test_grsai_sync_compat.py
src/: admin.rs  allocator.rs  blob_runtime.rs  cache.rs  config.rs  grsai.rs  image_io.rs  lib.rs  main.rs  openai_image.rs  provider.rs  proxy_image.rs  request_encode.rs  request_materialize.rs  request_rewrite.rs  request_scan.rs  response_materialize.rs  response_rewrite.rs  stream_rewrite.rs  upload.rs  upstream.rs  upstream_block_cache.rs
tests/: admin_task1_contract_test.rs  admin_test.rs  allocator_test.rs  blob_runtime_test.rs  config_budget_test.rs  config_test.rs  go_compat_test.rs  grsai_test.rs  http_forwarding_test.rs  http_smoke.rs  image_io_test.rs  openai_image_test.rs  provider_test.rs  proxy_image_test.rs  request_cache_test.rs  request_encode_test.rs  request_inline_data_flow_test.rs  request_materialize_test.rs  request_rewrite_test.rs  response_materialize_test.rs  response_rewrite_test.rs  router_test.rs  stream_rewrite_test.rs  upload_mode_test.rs  upstream_auth_test.rs
(+15 files in other folders)
