[package]
name = "rust-sync-proxy"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
bytes = "1.10"
http = "1.3"
mime = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
jpeg-encoder = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.9"
time = { version = "0.3", features = ["formatting", "macros"] }
lru = "0.12"

[target.'cfg(all(target_os = "linux", target_env = "gnu"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
futures-util = "0.3"
tempfile = "3"
